--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"prepare": "husky install"
+	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx}": "eslint"
 	},
 	"browserslist": {
 		"production": [
@@ -39,6 +43,9 @@
 		"@typescript-eslint/parser": "^5.17.0",
 		"eslint": "^8.12.0",
 		"eslint-plugin-react": "^7.29.4",
-		"prettier": "^2.6.2"
+		"lint-staged": "^12.3.7",
+		"prettier": "^2.6.2",
+		"pretty-quick": "^3.1.3",
+		"husky": "^7.0.0"
 	}
 }
