--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
 		"@types/react": "^17.0.43",
 		"@types/react-dom": "^17.0.14",
 		"react": "^18.0.0",
+		"react-cookie": "^4.1.1",
 		"react-dom": "^18.0.0",
 		"react-scripts": "5.0.0",
 		"typescript": "^4.6.3",
+		"uuid": "^8.3.2",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -39,13 +41,14 @@
 		]
 	},
 	"devDependencies": {
+		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.17.0",
 		"@typescript-eslint/parser": "^5.17.0",
 		"eslint": "^8.12.0",
 		"eslint-plugin-react": "^7.29.4",
+		"husky": "^7.0.0",
 		"lint-staged": "^12.3.7",
 		"prettier": "^2.6.2",
-		"pretty-quick": "^3.1.3",
-		"husky": "^7.0.0"
+		"pretty-quick": "^3.1.3"
 	}
 }
