--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/styled-components": "^5.1.24",
 		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.17.0",
 		"@typescript-eslint/parser": "^5.17.0",
