--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
 		"lint-staged": "^12.3.7",
 		"prettier": "^2.6.2",
 		"pretty-quick": "^3.1.3"
+	},
+	"optionalDependencies": {
+		"fsevents": "^2.3.2"
 	}
 }
